--- a/TrackerUI/App.config
+++ b/TrackerUI/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+	<connectionStrings>
+		<add 
+			name="Bluelime" 
+			connectionString="Server=.\SQLSERVER2019;Database=Bluelime;Trusted_Connection=True;"
+			providerName="System.Data.SqlClient"
+			/>
+	</connectionStrings>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
 	</startup>
